`bun run lint --fix`

--- a/docs/main.css
+++ b/docs/main.css
@@ -1,4 +1,4 @@
-@import 'https://fonts.bunny.net/css?family=alice:400';
+@import url('https://fonts.bunny.net/css?family=alice:400');
 
 html {
   height: 100%;
