--- a/docs/main.css
+++ b/docs/main.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.bunny.net/css?family=alice:400');
-
 html {
-  height: 100%;
+  height: 100dvh;
 }
 
 body {
   background-color: #333631;
-  height: 100%;
+  height: 100dvh;
 }
 
 a {
@@ -15,31 +13,37 @@ a {
 }
 
 #index {
-  height: 100%;
+  height: 100dvh;
   text-align: center;
+  display: grid;
+  grid-template:
+    'main' 95dvh
+    'footer' 5dvh;
+  font-family: Inconsolata, monospace;
 }
 
 .main {
-  height: 95%;
-  display: grid;
-  grid-template:
-    '_main-noop-head' 40%
-    'main-links' 60%;
-  text-align: center;
+  grid-area: main;
+  display: flex;
+  align-items: center;
   font-size: large;
-  font-family: Alice, sans-serif;
 }
 
 .main-links {
-  grid-area: main-links;
   list-style: none;
+  text-align: center;
+  width: 100%;
 }
 
 .footer {
-  max-height: 5%;
+  grid-area: footer;
+}
+
+.footer-body {
   font-size: x-small;
   position: sticky;
   top: 100%;
   margin-right: 0.2rem;
   text-align: right;
+  font-family: 'Noto Emoji', sans-serif;
 }
