Replace bun with deno for supporting stylelint without nodejs (#61)
* Replace bun with deno for supporting stylelint

* Is this needed?

* Is this?

* deno returns 0 for failed commands...

* This works. However still returns 0 for exit code

* Tired from deno and nodejs process comapt...

* Fix to handle unbuffer command

* Is this work?

* Fix line ending

* Extract to script file

* Add comment

* Can not be used?

* Remove testing code

--- a/public/main.css
+++ b/public/main.css
@@ -19,7 +19,7 @@ a {
   grid-template:
     'main' 95dvh
     'footer' 5dvh;
-  font-family: Inconsolata, monospace;
+  font-family: Inconsolata, monospace; /* Should fail! for test */
 }
 
 .main {
